--- a/Arquivos convertidos/package.json
+++ b/Arquivos convertidos/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "less": "less-watch-compiler ./src/styles ./build/styles/ main.less"
+    "less": "less-watch-compiler ./src/styles ./build/styles/ main.less --source-map"
   },
   "author": "",
   "license": "ISC",
